--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "password-validator": "^5.3.0"
   },
   "name": "coaching-manger",
   "version": "1.0.0",
