--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-persist": "^1.0.2",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
