--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "firebase": "^10.8.0",
     "flowbite-react": "^0.7.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-cookie": "^7.1.0",
