--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
     "password-validator": "^5.3.0"
   },
