--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGO_URL = 'mongodb+srv://yousefmankola10:yousef1995@cluster0.e4uumwa.mongodb.net/'
 JWT_SECRET = 'jbvskdbviugohvoahv9878gsiubi2bcvsbksfbi7gw7fwfgdbvdbjdvb8'
+
+EMAIL_USER = "yousef.mankola10@gmail.com"
+PASSWORD_USER = "mnvp mnuf azmj oigz"
